--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lint:fix": "vue-cli-service lint --fix",
+    "publish": "node scripts/deployToProduction.js"
   },
   "dependencies": {
+    "@types/gh-pages": "^2.0.1",
     "core-js": "^3.4.3",
+    "gh-pages": "^2.1.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
