--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "@types/gh-pages": "^2.0.1",
+    "@types/reflect-metadata": "^0.1.0",
     "core-js": "^3.4.3",
     "gh-pages": "^2.1.1",
+    "normalize.css": "^8.0.1",
+    "reflect-metadata": "^0.1.13",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@types/chai": "^4.2.5",
